Bug 686469 - Tab-modal alert can overflow the browser window. r=dolske

--- a/toolkit/content/xul.css
+++ b/toolkit/content/xul.css
@@ -1192,5 +1192,6 @@ filefield {
 /*********** tabmodalprompt ************/
 tabmodalprompt {
   -moz-binding: url("chrome://global/content/tabprompts.xml#tabmodalprompt");
+  overflow: hidden;
   text-shadow: none;
 }
